--- a/exercicios/ex026/mq004/css/media-queries.css
+++ b/exercicios/ex026/mq004/css/media-queries.css
@@ -4,26 +4,70 @@
   Não há configurações de pequenas telas e celulares porque o site já é mobile-first*/
 
   @media print{ /* IMPRESSÃO */
-    body{
-        background-image: url(../imagens/back-print.jpg);
+
+    *{
+      font-family: 'Courier New', Courier, monospace;
     }
+
+    body{
+        background-image: url(../imagens/back-print.jpg); /* Desnecessário*/
+    }
+
+    main{
+      border: 2px solid black;
+      width: 90vw;
+    }
+
+    main h1{
+      color: black;
+      text-shadow: none;
+    }
+
+    main::after{
+      content: 'Essa impressão foi feita através do site www.cursoemvideo.com';
+      text-decoration: overline;
+    }
+
+    img#phone{display: none;}
+    img#tablet{display: none;}
+    img#print{display: block;}
+    img#pc{display: none;}
+    img#tv{display: none;}
   }
 
   @media screen and (min-width: 768px) and (max-width: 992px) { /* TABLET */
     body{
         background-image: url(../imagens/back-tablet.jpg);
     }
+
+    img#phone{display: none;}
+    img#tablet{display: block;}
+    img#print{display: none;}
+    img#pc{display: none;}
+    img#tv{display: none;}
   }
 
   @media screen and (min-width:992px) and (max-width: 1200px){ /* DESKTOP */
     body{
         background-image: url(../imagens/back-pc.jpg);
     }
+
+    img#phone{display: none;}
+    img#tablet{display: none;}
+    img#print{display: none;}
+    img#pc{display: block;}
+    img#tv{display: none;}
   }
 
   @media screen and (min-width: 1200px){ /* GRANDES TELAS */
     body{
         background-image: url(../imagens/back-tv.jpg);
     }
+
+    img#phone{display: none;}
+    img#tablet{display: none;}
+    img#print{display: none;}
+    img#pc{display: none;}
+    img#tv{display: block;}
   }
 
